# great-attractor-system

./: .gitignore  README.md  main.py  pyproject.toml
app/core/: config.py  logging.py  utils.py  vectoring.py
app/processors/: __init__.py  excel_processor.py  standard_data_processor.py  user_data_processor.py
scripts/: compare_dbs.py  csv_to_excel.py  excel_to_csv.py  process_standard_data.py  process_user_csv_streaming.py  run_processing_pipeline.py  watch_db.py
static/: index.html
